--- a/index.html
+++ b/index.html
@@ -46,21 +46,11 @@
 			<div class="row">
 				<div class="col-12 col-sm-12 col-md-12 col-lg-12">
 					<ul>
-						<li>
-							<a href="index.html">Accueil</a>
-						</li>
-						<li>
-							<a href="carte.html">Carte</a>
-						</li>
-						<li>
-							<a href="photos.html">Photos</a>
-						</li>
-						<li>
-							<a href="restaurants.html">Restaurants</a>
-						</li>
-						<li>
-							<a href="contact.html">Contact</a>
-						</li>
+						<li class="pages"><a href="index.html">Accueil</a></li>
+						<li class="pages"><a href="carte.html">Carte</a></li>
+						<li class="pages"><a href="photos.html">Photos</a></li>
+						<li class="pages"><a href="restaurants.html">Restaurants</a></li>
+						<li class="pages"><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
