--- a/photo2.html
+++ b/photo2.html
@@ -13,13 +13,13 @@
 	<div class="container">
 		<div class="row photos">
 			<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-				<img src="image/wl1.jpg" class="img-thumbnail" alt="Image du restaurant">
+				<img src="image/wl4.jpg" class="img-thumbnail" alt="Image du restaurant">
 			</div>
 			<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-				<img src="image/wl2.jpg" class="img-thumbnail" alt="Image du restaurant">
+				<img src="image/wl5.jpg" class="img-thumbnail" alt="Image du restaurant">
 			</div>
 			<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-				<img src="image/wl3.jpg" class="img-thumbnail" alt="Image du restaurant">
+				<img src="image/wa1.jpg" class="img-thumbnail" alt="Image du restaurant">
 			</div>
 			<div class="row">
 				<div class="offset-2 col-4 col-sm-4 col-md-4 col-lg-4">
@@ -34,11 +34,11 @@
 			<div class="row">
 				<div class="col-12 col-sm-12 col-md-12 col-lg-12">
 					<ul>
-						<li class="pages"><a href="index.html">Accueil</a></li>
-						<li class="pages"><a href="carte.html">Carte</a></li>
-						<li class="pages"><a href="photos.html">Photos</a></li>
-						<li class="pages"><a href="restaurants.html">Restaurants</a></li>
-						<li class="pages"><a href="contact.html">Contact</a></li>
+						<li><a href="index.html">Accueil</a></li>
+						<li><a href="carte.html">Carte</a></li>
+						<li><a href="photos.html">Photos</a></li>
+						<li><a href="restaurants.html">Restaurants</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
