tout terminé à part ce fichu glyphicon...

--- a/carte.html
+++ b/carte.html
@@ -11,61 +11,64 @@
 </head>
 <body>
 	<div class="container">
+		<div class="jumbotron">
+			<h1>CARTE</h1>
+		</div>
 		<div class="row">
 			<div class="offset-2 col-5 col-sm-5 col-md-5 col-lg-5">
-				<ul>
-					<li class="carte">Suspendisse vel ante non</li><br>
+				<ul class="plats">
+					<li class="carte">Suspendisse vel ante non &#12919;</li><br>
 
-					<li class="carte">Donec non lorem id</li><br>
+					<li class="carte">Donec non lorem id &#12919;</li><br>
  
- 					<li class="carte">Mauris lobortis diam eu</li><br>
+ 					<li class="carte">Mauris lobortis diam eu &#12919;</li><br>
 
-					<li class="carte">Vivamus vel tellus eget</li><br>
+					<li class="carte">Vivamus vel tellus eget &#12919;</li><br>
   
-  					<li class="carte">Nam non nisl eget sem</li><br>
+  					<li class="carte">Nam non nisl eget sem &#12919;</li><br>
   
-  					<li class="carte">Sed pellentesque turpis id</li><br>
+  					<li class="carte">Sed pellentesque turpis id &#12919;</li><br>
 
-					<li class="carte">Nunc mattis tortor vel</li><br>
+					<li class="carte">Nunc mattis tortor vel &#12919;</li><br>
   
-  					<li class="carte">Pellentesque at ex euismod</li><br>
+  					<li class="carte">Pellentesque at ex euismod &#12919;</li><br>
   
-  					<li class="carte">Aenean in orci cursus</li><br>
+  					<li class="carte">Aenean in orci cursus &#12919;</li><br>
   
-  					<li class="carte">Integer suscipit enim vitae</li><br>
+  					<li class="carte">Integer suscipit enim vitae &#12919;</li><br>
   				</ul>
 			</div>
 			<div class="col-5 col-sm-5 col-md-5 col-lg-5">
-				<ul>
-					<li class="carte">Integer malesuada mauris id</li><br>
+				<ul class="plats">
+					<li class="carte">Integer malesuada mauris id &#13008;</li><br>
 
-					<li class="carte">Nam varius arcu eget</li><br>
+					<li class="carte">Nam varius arcu eget &#13008;</li><br>
   
-  					<li class="carte">Nam laoreet ante tincidunt</li><br>
+  					<li class="carte">Nam laoreet ante tincidunt &#13008;</li><br>
 
-					<li class="carte">Morbi quis est at</li><br>
+					<li class="carte">Morbi quis est at &#13008;</li><br>
   
-  					<li class="carte">Aenean volutpat massa semper</li><br>
+  					<li class="carte">Aenean volutpat massa semper &#13008;</li><br>
   
-  					<li class="carte">Sed fermentum velit sed</li><br>
+  					<li class="carte">Sed fermentum velit sed &#13008;</li><br>
   
-  					<li class="carte">Duis rutrum sem vitae</li><br>
+  					<li class="carte">Duis rutrum sem vitae &#13008;</li><br>
   
-  					<li class="carte">Etiam fringilla nunc in</li><br>
+  					<li class="carte">Etiam fringilla nunc in &#13008;</li><br>
   
-  					<li class="carte">Morbi eu lorem quis</li><br>
+  					<li class="carte">Morbi eu lorem quis &#13008;</li><br>
   
-  					<li class="carte">Curabitur et nisi iaculis</li><br>
+  					<li class="carte">Curabitur et nisi iaculis &#13008;</li><br>
 				</ul>
 			</div>
 			<div class="row">
 				<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-					<ul>
-						<li class="pages"><a href="index.html">Accueil</a></li>
-						<li class="pages"><a href="carte.html">Carte</a></li>
-						<li class="pages"><a href="photos.html">Photos</a></li>
-						<li class="pages"><a href="restaurants.html">Restaurants</a></li>
-						<li class="pages"><a href="contact.html">Contact</a></li>
+					<ul class="pages">
+						<li class="page"><a href="index.html">Accueil</a></li>
+						<li class="page"><a href="carte.html">Carte</a></li>
+						<li class="page"><a href="photos.html">Photos</a></li>
+						<li class="page"><a href="restaurants.html">Restaurants</a></li>
+						<li class="page"><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
