--- a/contact.html
+++ b/contact.html
@@ -11,23 +11,26 @@
 </head>
 <body>
 	<div class="container">
+		<div class="jumbotron">
+			<h1 class="contact">CONTACT</h1>
+		</div>
 		<div class="row">
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12">
+			<div class="formulaire col-12 col-sm-12 col-md-12 col-lg-12">
 				<h2>FORMULAIRE DE CONTACT</h2>
 			</div>
-			<div class="form-group col-6 col-sm-6 col-md-6 col-lg-6">
+			<div class="nom form-group col-6 col-sm-6 col-md-6 col-lg-6">
 				<label for="exampleTextarea">NOM:</label>
 				<textarea class="form-control" rows="1"></textarea>
 			</div>
-			<div class="col-6 col-sm-6 col-md-6 col-lg-6">
+			<div class="prenom col-6 col-sm-6 col-md-6 col-lg-6">
 				<label for="exampleTextarea">PRÉNOM:</label>
 				<textarea class="form-control" rows="1"></textarea>
 			</div>
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12">
+			<div class="email col-12 col-sm-12 col-md-12 col-lg-12">
 				<label for="exampleTextarea">E-MAIL:</label>
 				<textarea class="form-control" rows="1"></textarea>
 			</div>
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12">
+			<div class="objmsg col-12 col-sm-12 col-md-12 col-lg-12">
 				<label for="exampleTextarea">OBJET DU MESSAGE:</label>
 				<select multiple class=form-control>
  					<option value=un>Suspendisse lobortis ante ante, eget.</option>
@@ -42,21 +45,21 @@
  					<option value="dix">In sed nulla sodales, tristique sem quis, maximus orci. Pellentesque sagittis augue velit. </option>
 				</select>
 			</div>
-			<div class="form-group col-12 col-sm-12 col-md-12 col-lg-12">
+			<div class="msg form-group col-12 col-sm-12 col-md-12 col-lg-12">
     			<label for="exampleTextarea">MESSAGE:</label>
     			<textarea class="form-control" id="exampleTextarea" rows="5"></textarea>
   			</div>
-  			<div class="offset-5 col-4 col-sm-4 col-md-4 col-lg-4">
-  				<button type="submit" class="btn btn-primary">Submit</button>
+  			<div class="boutton offset-5 col-4 col-sm-4 col-md-4 col-lg-4">
+  				<button type="submit" class="btn btn-primary"><span class="glyphicons glyphicons-glass">Submit</span></button>
   			</div>
   			<div class="row">
 				<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-					<ul>
-						<li class="pages"><a href="index.html">Accueil</a></li>
-						<li class="pages"><a href="carte.html">Carte</a></li>
-						<li class="pages"><a href="photos.html">Photos</a></li>
-						<li class="pages"><a href="restaurants.html">Restaurants</a></li>
-						<li class="pages"><a href="contact.html">Contact</a></li>
+					<ul class="pages">
+						<li class="page"><a href="index.html">Accueil</a></li>
+						<li class="page"><a href="carte.html">Carte</a></li>
+						<li class="page"><a href="photos.html">Photos</a></li>
+						<li class="page"><a href="restaurants.html">Restaurants</a></li>
+						<li class="page"><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
