--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h1>CHENG</h1>
 		</div>
 		<div class="row">
-			<div class="col-6 col-sm-6 col-md-6 col-lg-6">
+			<div class="tableau1 col-6 col-sm-6 col-md-6 col-lg-6">
 				<h2>Mauris molestie</h2>
 				<p>
 					Donec id lorem id ligula iaculis vulputate sed et neque. In auctor luctus eros, at maximus diam iaculis quis. Pellentesque.
@@ -29,7 +29,7 @@
 					Duis non eleifend dolor. Sed interdum tincidunt metus at sollicitudin. Donec ac justo blandit, interdum diam sed, tempor neque. Nunc ac venenatis sapien, eu vestibulum arcu. Fusce elementum nec enim.
 				</p><br>
 			</div>
-			<div class="col-6 col-sm-6 col-md-6 col-lg-6">
+			<div class="tableau2 col-6 col-sm-6 col-md-6 col-lg-6">
 				<h2>In imperdiet ultrices nibh</h2>
 				<p>
 					Integer quis porttitor purus, vel sodales arcu. Mauris ullamcorper at quam nec elementum. Vivamus.
@@ -45,12 +45,12 @@
 			</div>
 			<div class="row">
 				<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-					<ul>
-						<li class="pages"><a href="index.html">Accueil</a></li>
-						<li class="pages"><a href="carte.html">Carte</a></li>
-						<li class="pages"><a href="photos.html">Photos</a></li>
-						<li class="pages"><a href="restaurants.html">Restaurants</a></li>
-						<li class="pages"><a href="contact.html">Contact</a></li>
+					<ul class="pages">
+						<li class="page"><a href="index.html">Accueil</a></li>
+						<li class="page"><a href="carte.html">Carte</a></li>
+						<li class="page"><a href="photos.html">Photos</a></li>
+						<li class="page"><a href="restaurants.html">Restaurants</a></li>
+						<li class="page"><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
