--- a/photo3.html
+++ b/photo3.html
@@ -11,34 +11,34 @@
 </head>
 <body>
 	<div class="container">
+		<div class="jumbotron">
+			<h1>PHOTOS</h1>
+		</div>
 		<div class="row photos">
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-				<img src="image/wa2.jpg" class="img-thumbnail" alt="Image du restaurant">
+			<div class="offset-3 col-9 col-sm-9 col-md-9 col-lg-9">
+				<img src="image/wa2.jpg" class="photol img-thumbnail" alt="Image du restaurant">
 			</div>
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-				<img src="image/wa3.jpg" class="img-thumbnail" alt="Image du restaurant">
-			</div>
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-				<img src="image/wa4.jpg" class="img-thumbnail" alt="Image du restaurant">
+			<div class="offset-3 col-9 col-sm-9 col-md-9 col-lg-9">
+				<img src="image/wa4.jpg" class="photol img-thumbnail" alt="Image du restaurant">
 			</div>
 			<div class="row">
-				<div class="offset-2 col-4 col-sm-4 col-md-4 col-lg-4">
+				<div class="offset-2 col-9 col-sm-9 col-md-9 col-lg-9">
 					<ul>
-						<li class="photos"><a href="photos.html">Photos 1</a></li>
-						<li class="photos"><a href="photo2.html">Photos 2</a></li>
-						<li class="photos"><a href="photo3.html">Photos 3</a></li>
-						<li class="photos"><a href="photo4.html">Photos 4</a></li>
+						<li class="photosb"><a href="photos.html">Photos 1</a></li>
+						<li class="photosb"><a href="photo2.html">Photos 2</a></li>
+						<li class="photosb"><a href="photo3.html">Photos 3</a></li>
+						<li class="photosb"><a href="photo4.html">Photos 4</a></li>
 					</ul>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-12 col-sm-12 col-md-12 col-lg-12">
 					<ul>
-						<li><a href="index.html">Accueil</a></li>
-						<li><a href="carte.html">Carte</a></li>
-						<li><a href="photos.html">Photos</a></li>
-						<li><a href="restaurants.html">Restaurants</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li class="page"><a href="index.html">Accueil</a></li>
+						<li class="page"><a href="carte.html">Carte</a></li>
+						<li class="page"><a href="photos.html">Photos</a></li>
+						<li class="page"><a href="restaurants.html">Restaurants</a></li>
+						<li class="page"><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
