--- a/restaurants.html
+++ b/restaurants.html
@@ -11,8 +11,11 @@
 </head>
 <body>
 	<div class="container">
+		<div class="jumbotron">
+			<h1 class="titrerestaurants">RESTAURANTS</h1>
+		</div>
 		<div class="row">
-			<div class="col-6 col-sm-6 col-md-6 col-lg-6">
+			<div class="offset-1 col-5 col-sm-5 col-md-5 col-lg-5">
 				<h2>CHENG Louvain-la-neuve</h2><br>
 				<p>Adresse: Rue Charlemagne 20, 1348 Ottignies-Louvain-la-Neuve</p><br>
 				<ul>
@@ -25,7 +28,7 @@
 					<li class="horaire">Dim 11:30 - 22:00</li>
 				</ul>
 			</div>
-			<div class="col-6 col-sm-6 col-md-6 col-lg-6">
+			<div class="offset-1 col-5 col-sm-5 col-md-5 col-lg-5">
 				<h2>CHENG Anvers</h2><br>
 				<p>Adresse: De Keyserlei 13, 2018 Anvers</p><br>
 				<ul>
@@ -41,12 +44,12 @@
 		</div>
 		<div class="row">
 			<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-				<ul>
-					<li class="pages"><a href="index.html">Accueil</li></a>
-					<li class="pages"><a href="carte.html">Carte</li></a>
-					<li class="pages"><a href="photos.html">Photos</li></a>
-					<li class="pages"><a href="restaurants.html">Restaurants</li></a>
-					<li class="pages"><a href="contact.html">Contact</li></a>
+				<ul class="pages">
+					<li class="page"><a href="index.html">Accueil</li></a>
+					<li class="page"><a href="carte.html">Carte</li></a>
+					<li class="page"><a href="photos.html">Photos</li></a>
+					<li class="page"><a href="restaurants.html">Restaurants</li></a>
+					<li class="page"><a href="contact.html">Contact</li></a>
 				</ul>
 			</div>
 		</div>
