--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+	<link rel="stylesheet" href="cssa/font-awesome.min.css">
 </head>
 <body>
 	<div class="container">
@@ -50,7 +51,8 @@
     			<textarea class="form-control" id="exampleTextarea" rows="5"></textarea>
   			</div>
   			<div class="boutton offset-5 col-4 col-sm-4 col-md-4 col-lg-4">
-  				<button type="submit" class="btn btn-primary"><span class="glyphicons glyphicons-glass">Submit</span></button>
+  				<button type="submit" class="btn btn-primary"><i class="fa fa-envelope" aria-hidden="true"> <span class="envoyer">Envoyer</span></i>
+</button>
   			</div>
   			<div class="row">
 				<div class="col-12 col-sm-12 col-md-12 col-lg-12">
