--- a/carte.html
+++ b/carte.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+	<link rel="stylesheet" href="cssa/font-awesome.min.css">
 </head>
 <body>
 	<div class="container">
