--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<h1>CHENG</h1>
 		</div>
 		<div class="row">
-			<div class="tableau1 col-6 col-sm-6 col-md-6 col-lg-6">
+			<div class="tableau1 col-5 col-sm-5 col-md-5 col-lg-5">
 				<h2>Mauris molestie</h2>
 				<p>
 					Donec id lorem id ligula iaculis vulputate sed et neque. In auctor luctus eros, at maximus diam iaculis quis. Pellentesque.
@@ -30,7 +30,7 @@
 					Duis non eleifend dolor. Sed interdum tincidunt metus at sollicitudin. Donec ac justo blandit, interdum diam sed, tempor neque. Nunc ac venenatis sapien, eu vestibulum arcu. Fusce elementum nec enim.
 				</p><br>
 			</div>
-			<div class="tableau2 col-6 col-sm-6 col-md-6 col-lg-6">
+			<div class="tableau2 offset-2 col-5 col-sm-5 col-md-5 col-lg-5">
 				<h2>In imperdiet ultrices nibh</h2>
 				<p>
 					Integer quis porttitor purus, vel sodales arcu. Mauris ullamcorper at quam nec elementum. Vivamus.
