résultat souhaité obtenu

--- a/carte.html
+++ b/carte.html
@@ -16,7 +16,7 @@
 			<h1>CARTE</h1>
 		</div>
 		<div class="row">
-			<div class="offset-2 col-5 col-sm-5 col-md-5 col-lg-5">
+			<div class="tableau1 offset-1 col-4 col-sm-4 col-md-4 col-lg-4">
 				<ul class="plats">
 					<li class="carte">Suspendisse vel ante non &#12919;</li><br>
 
@@ -39,7 +39,7 @@
   					<li class="carte">Integer suscipit enim vitae &#12919;</li><br>
   				</ul>
 			</div>
-			<div class="col-5 col-sm-5 col-md-5 col-lg-5">
+			<div class="tableau2 offset-2 col-4 col-sm-4 col-md-4 col-lg-4">
 				<ul class="plats">
 					<li class="carte">Integer malesuada mauris id &#13008;</li><br>
 
@@ -63,7 +63,7 @@
 				</ul>
 			</div>
 			<div class="row">
-				<div class="col-12 col-sm-12 col-md-12 col-lg-12">
+				<div class="footer col-12 col-sm-12 col-md-12 col-lg-12">
 					<ul class="pages">
 						<li class="page"><a href="index.html">Accueil</a></li>
 						<li class="page"><a href="carte.html">Carte</a></li>
