--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</p><br>
 			</div>
 			<div class="row">
-				<div class="col-12 col-sm-12 col-md-12 col-lg-12">
+				<div class="footer col-12 col-sm-12 col-md-12 col-lg-12">
 					<ul class="pages">
 						<li class="page"><a href="index.html">Accueil</a></li>
 						<li class="page"><a href="carte.html">Carte</a></li>
