--- a/photos.html
+++ b/photos.html
@@ -26,7 +26,7 @@
 				<img src="image/wl3.jpg" class="photol img-thumbnail" alt="Image du restaurant">
 			</div>
 			<div class="row">
-				<div class="offset-2 col-9 col-sm-9 col-md-9 col-lg-9">
+				<div class="pagesphotos offset-2 col-9 col-sm-9 col-md-9 col-lg-9">
 					<ul>
 						<li class="photosb"><a href="photos.html">Photos 1</a></li>
 						<li class="photosb"><a href="photo2.html">Photos 2</a></li>
@@ -36,7 +36,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-12 col-sm-12 col-md-12 col-lg-12">
+				<div class="footer col-12 col-sm-12 col-md-12 col-lg-12">
 					<ul class="pages">
 						<li class="page"><a href="index.html">Accueil</a></li>
 						<li class="page"><a href="carte.html">Carte</a></li>
