--- a/restaurants.html
+++ b/restaurants.html
@@ -16,7 +16,7 @@
 			<h1 class="titrerestaurants">RESTAURANTS</h1>
 		</div>
 		<div class="row">
-			<div class="offset-1 col-5 col-sm-5 col-md-5 col-lg-5">
+			<div class="tableau1 col-5 col-sm-5 col-md-5 col-lg-5">
 				<h2>CHENG Louvain-la-neuve</h2><br>
 				<p>Adresse: Rue Charlemagne 20, 1348 Ottignies-Louvain-la-Neuve</p><br>
 				<ul>
@@ -29,7 +29,7 @@
 					<li class="horaire">Dim 11:30 - 22:00</li>
 				</ul>
 			</div>
-			<div class="offset-1 col-5 col-sm-5 col-md-5 col-lg-5">
+			<div class="tableau2 offset-2 col-5 col-sm-5 col-md-5 col-lg-5">
 				<h2>CHENG Anvers</h2><br>
 				<p>Adresse: De Keyserlei 13, 2018 Anvers</p><br>
 				<ul>
@@ -44,7 +44,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12">
+			<div class="footer col-12 col-sm-12 col-md-12 col-lg-12">
 				<ul class="pages">
 					<li class="page"><a href="index.html">Accueil</li></a>
 					<li class="page"><a href="carte.html">Carte</li></a>
