--- a/photo2.html
+++ b/photo2.html
@@ -26,7 +26,7 @@
 				<img src="image/wa1.jpg" class="photol img-thumbnail" alt="Image du restaurant">
 			</div>
 			<div class="row">
-				<div class="offset-2 col-9 col-sm-9 col-md-9 col-lg-9">
+				<div class="pagesphotos offset-2 col-9 col-sm-9 col-md-9 col-lg-9">
 					<ul>
 						<li class="photosb"><a href="photos.html">Photos 1</a></li>
 						<li class="photosb"><a href="photo2.html">Photos 2</a></li>
